<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/material_dynamic_primary80">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/contacts_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/white"
        android:title="@string/title"
        android:elevation="4dp"
        android:background="@color/material_dynamic_primary50"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_primary95"
            android:hint="@string/contact_name_key"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_number_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/contact_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_primary95"
            android:hint="@string/contact_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_number_layout"
        app:backgroundTint="@color/material_dynamic_primary50"/>

    <Button
        android:id="@+id/deleteContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_contact"
        android:visibility="gone"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/addContactButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/material_dynamic_primary50"/>
</androidx.constraintlayout.widget.ConstraintLayout>
