<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary80">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/contacts_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/material_dynamic_primary50"
        android:elevation="4dp"
        android:title="@string/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/contact_card" />

    <Button
        android:id="@+id/request_permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_permission"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/add_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@color/material_dynamic_primary50"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_contact"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/material_dynamic_primary50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
